[package]
name = "webcodecs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "ErrorEvent",
    "HardwareAcceleration",
    "HtmlCanvasElement",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "VideoFrame",
    "Window",
]}
