[package]
name = "webcodecs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "CanvasRenderingContext2d",
    "CodecState",
    "Document",
    "Element",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "ErrorEvent",
    "HardwareAcceleration",
    "HtmlCanvasElement",
    "Navigator",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "VideoFrame",
    "Window",
    "XrRenderStateInit",
    "XrSession",
    "XrSessionInit",
    "XrSessionMode",
    "XrSystem",
    "XrWebGlLayer",
]}
